feat: add break extension capability

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1091,6 +1091,9 @@ body::before {
 }
 
 .break-actions {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
     width: 100%;
 }
 
